commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,8 +10,12 @@
 </head>
 
 <body>
-  <h1>Aqui bamos a hacer un blog post</h1>
-  <p>Y este es el parrafo de inicio</p>
+  <div id="container">
+    <div id="post">
+      <h1>Aqui vamos a hacer un blog post</h1>
+      <p>Y este es el parrafo de inicio</p>
+    </div>
+  </div>
 </body>
 
 </html>
