estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,9 @@
 
 <body>
   <div id="container">
+    <div id="cabecera">
+      cabecera
+    </div>
     <div id="post">
       <h1>Aqui vamos a hacer un blog post</h1>
       <p>Y este es el parrafo de inicio</p>
