--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,8 @@
 <body>
   <div id="container">
     <div id="cabecera">
-      cabecera
+      Hyperblog
+      <span id="tagline">Tu blog de confianza</span>
     </div>
     <div id="post">
       <h1>Aqui vamos a hacer un blog post</h1>
