--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,9 @@
     <div id="post">
       <h1>Aqui vamos a hacer un blog post</h1>
       <p>Y este es el parrafo de inicio</p>
+      <p>los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en
+        youtbe. Excepto si eres un rockstar. Pero estadisticamente no lo eres ... por ahora.
+      </p>
     </div>
   </div>
 </body>
