se añadio lo que  falto del contenido del primer parrafo y se cambio el color de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -17,7 +17,7 @@
     </div>
     <div id="post">
       <h1>Aqui vamos a hacer un blog post</h1>
-      <p>Y este es el parrafo de inicio</p>
+      <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
     </div>
   </div>
 </body>
