agrege parrafo de suscripcion, cambie la cabecera maestra y puse el texto en anaranjado

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
   <div id="container">
     <div id="cabecera">
       Hyperblog
-      <span id="tagline"> Tu blog de confianza</span>
+      <span id="tagline"> Tu blog de maestro</span>
     </div>
     <div id="post">
       <h1>Aqui vamos a hacer un blog post</h1>
@@ -21,6 +21,7 @@
       <p>los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en
         youtbe. Excepto si eres un rockstar. Pero estadisticamente no lo eres ... por ahora.
       </p>
+      <p>Suscribete y dale like!</p>
     </div>
   </div>
 </body>
