una version del hiperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
   <div id="container">
     <div id="cabecera">
       Hyperblog
-      <span id="tagline"> Bienvenido a hyperblog</span>
+      <span id="tagline"> Bienvenido a hyperblog 2.0</span>
     </div>
     <div id="post">
       <h1>Aqui vamos a hacer un blog post</h1>
