color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
 <body>
   <div id="container">
     <div id="cabecera">
+      <img src="./imagenes/wow_huargen_logo.png" alt="logo" id="logo">
       Hyperblog
       <span id="tagline"> Bienvenido a hyperblog 2.0</span>
     </div>
