Cambio de titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,14 +14,14 @@
     <div id="cabecera">
       <img src="./imagenes/wow_huargen_logo.png" alt="logo" id="logo">
       Hyperblog
-      <span id="tagline"> Bienvenido a hyperblog 2.0</span>
+      <span id="tagline">hyperblog 2.0 es un blog del futuro</span>
     </div>
     <div id="post">
       <h1>Aqui vamos a hacer un blog post</h1>
       <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer
         con ramas</p>
       <p>los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en
-        youtbe. Excepto si eres un rockstar. Pero estadisticamente no lo eres ... por ahora.
+        youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres ... por ahora.
       </p>
       <p>Suscribete y dale like!</p>
     </div>
