--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>blogpost</title>
+  <title>hyperblog 2.0 es un blog del futuro</title>
   <link rel="stylesheet" href="./css/estilos.css">
 </head>
 
@@ -14,7 +14,7 @@
     <div id="cabecera">
       <img src="./imagenes/wow_huargen_logo.png" alt="logo" id="logo">
       Hyperblog
-      <span id="tagline">hyperblog 2.0 es un blog del futuro</span>
+      <span id="tagline">Tu blog de cabecera</span>
     </div>
     <div id="post">
       <h1>Aqui vamos a hacer un blog post</h1>
