Agrege una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -17,9 +17,10 @@
       <span id="tagline">Tu blog de cabecera</span>
     </div>
     <div id="post">
-      <h1>Aqui vamos a hacer un blog post</h1>
+      <h1>Este es el titulo atractivo e interesante de post</h1>
       <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer
         con ramas</p>
+      <p class="huargen_logo"><img src="./imagenes/wow_huargen_logo.png" alt="huargen" class="huargen"></p>
       <p>los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en
         youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora
       </p>
