--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
     <div id="cabecera">
       <img src="./imagenes/wow_huargen_logo.png" alt="logo" id="logo">
       Hyperblog
-      <span id="tagline">Tu blog de cabecera</span>
+      <span id="tagline">Tu blog de confianza</span>
     </div>
     <div id="post">
       <h1>Este es el titulo atractivo e interesante de post</h1>
